--- a/blockly/media/webfrontend.css
+++ b/blockly/media/webfrontend.css
@@ -57,7 +57,8 @@ td {
 }
 pre,
 #content_xml,
-#content_arduino {
+.content_arduino {
+  background-color: white;
   width: 100%;
   height: 100%;
   padding: 0;
@@ -67,12 +68,46 @@ pre,
   overflow: hidden;
   display: none;
 }
+.content_arduino_peak {
+  background-color: #ccc;
+  width: 30%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  border: 1px solid #aaa;
+  border-top-style: none;
+  overflow: none;
+  float: right;
+  z-index: 2;
+}
+.content_block {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  border: 1px solid #ccc;
+  border-top-style: none;
+  overflow: hidden;
+  z-index: 1;
+}
+.content_block_peak {
+  width: 69%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  border: 1px solid #ccc;
+  border-top-style: none;
+  overflow: hidden;
+  float: left;
+  z-index: 1;
+}
 #textarea_xml,
 #textarea_arduino {
   width: 100%;
   height: 100%;
   border: none;
   resize: none;
+  white-space: nowrap;
 }
 iframe {
   width: 100%;
