--- a/blockly/media/webfrontend.css
+++ b/blockly/media/webfrontend.css
@@ -69,15 +69,15 @@ pre,
   display: none;
 }
 .content_arduino_peak {
-  background-color: #ccc;
-  width: 30%;
+  background-color: #eee;
+  width: 30.5%;
   height: 100%;
   padding: 0;
   margin: 0;
   border: 0px solid #aaa;
   border-top-style: none;
   overflow: none;
-  float: right;
+  float: left;
   z-index: 2;
 }
 .content_block {
@@ -106,6 +106,7 @@ pre,
   width: 100%;
   height: 100%;
   border: none;
+  background-color: transparent;
   resize: none;
 }
 iframe {
