--- a/blockly/media/webfrontend.css
+++ b/blockly/media/webfrontend.css
@@ -55,9 +55,9 @@ table {
 td {
   padding: 0;
 }
-pre,
+
 #content_xml,
-.content_arduino {
+#content_arduino {
   background-color: white;
   width: 100%;
   height: 100%;
@@ -68,17 +68,15 @@ pre,
   overflow: hidden;
   display: none;
 }
-.content_arduino_peak {
-  background-color: #eee;
-  width: 30.5%;
+.arduino_pre {
+  width: 29%;
   height: 100%;
   padding: 0;
   margin: 0;
-  border: 0px solid #aaa;
-  border-top-style: none;
-  overflow: none;
+  border: 0;
+  background-color: #eee;
+  overflow: hidden;
   float: left;
-  z-index: 2;
 }
 .content_block {
   width: 100%;
@@ -88,7 +86,6 @@ pre,
   border: 1px solid #ccc;
   border-top-style: none;
   overflow: hidden;
-  z-index: 1;
 }
 .content_block_peak {
   width: 69%;
@@ -99,7 +96,6 @@ pre,
   border-top-style: none;
   overflow: hidden;
   float: left;
-  z-index: 1;
 }
 #textarea_xml,
 #textarea_arduino {
