--- a/blockly/apps/blocklyduino/prism/prism.css
+++ b/blockly/apps/blocklyduino/prism/prism.css
@@ -47,13 +47,12 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
 }
 
 /* Code blocks */
-pre[class*="language-"] {
-	padding: 0.5em;
+pre[class*="language-"],
+code[class*="language-"] {
+	padding: 0;
 	margin: 0 0;
-	overflow: auto;
-}
-code[class*="language-"]{
-	overflow: scroll;
+	white-space: pre;
+	overflow: visible;
 }
 
 :not(pre) > code[class*="language-"],
