--- a/blockly/apps/blocklyduino/blockyduino.css
+++ b/blockly/apps/blocklyduino/blockyduino.css
@@ -4,10 +4,19 @@ html {
 body {
   background-color: white;
   font-family: sans-serif;
-  height: 100%;
   margin: 0;
-  padding: 0;
+  border: 0;
   overflow: hidden;
+  padding: 15px 15px 15px 15px;
+
+  /* Firefox */
+  height: -moz-calc(100% - 30px);
+  /* WebKit */
+  height: -webkit-calc(100% - 30px);
+  /* Opera */
+  height: -o-calc(100% - 30px);
+  /* Standard */
+  height: calc(100% - 30px);
 }
 .blocklySvg {
   height: 100%;
@@ -81,15 +90,36 @@ td {
   float: right;
   padding: 0;
   margin: 0;
-  border: 0;
+  border: 0!important;
   background-color: #eee;
-  overflow: scroll;
+  overflow: scroll!important;
   display: none;
 }
 #arduino_code_peek pre,
 #arduino_code_peek code {
-    overflow: visible;
-}  
+  border: 0!important;
+  overflow: visible;
+  white-space: pre!important;
+}
+.content_area {
+  /* Firefox */
+  width: -moz-calc(100%)!important;
+  /* WebKit */
+  width: -webkit-calc(100%)!important;
+  /* Opera */
+  width: -o-calc(100%)!important;
+  /* Standard */
+  width: calc(100%)!important;
+  height: 100%!important;
+  padding: 0;
+  margin: 0;
+  border-width: 0px 1px 1px 1px;
+  border-style: solid;
+  border-color: #ccc;
+  background-color: #eee;
+  position: absolute;
+  overflow: hidden;
+}
 .content_block {
   width: 100%;
   height: 100%;
